# hyperfleet

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  tsconfig.json
.github/workflows/: ci.yml
apps/api/: package.json
apps/api/src/: app.ts  index.ts  proxy.ts
apps/api/src/__tests__/integration/: docker-machines.integration.test.ts
apps/api/src/__tests__/services/: proxy.test.ts  validation.test.ts
apps/api/src/routes/: files.ts  index.ts  machines.ts
apps/api/src/services/: auth.ts  files.ts  machines.ts  runtime-factory.ts  runtime-manager.ts  validation.ts
apps/api/src/types/: index.ts
apps/docs/: package-lock.json
apps/docs/_data/: site.json
apps/docs/docs/: docs.json  index.md  installation.md  quickstart.md
apps/docs/docs/api/: authentication.md  commands.md  machines.md  overview.md
apps/docs/docs/configuration/: environment-variables.md  machine-options.md
apps/docs/docs/guides/: linux-development.md  machine-lifecycle.md  networking.md  reverse-proxy.md  sdk-usage.md
apps/docs/docs/reference/: error-codes.md  machine-states.md
crates/hyperfleet-api/: Cargo.toml
crates/hyperfleet-api/src/: handlers.rs  lib.rs  middleware.rs
crates/hyperfleet-cli/: Cargo.toml
crates/hyperfleet-cli/src/: main.rs
crates/hyperfleet-common/: Cargo.toml
crates/hyperfleet-common/src/: error.rs  id.rs  lib.rs  machine.rs  traits.rs
crates/hyperfleet-core/: Cargo.toml
crates/hyperfleet-core/src/: lib.rs
crates/hyperfleet-daemon/: Cargo.toml
crates/hyperfleet-daemon/src/: main.rs
crates/hyperfleet-db/: Cargo.toml
crates/hyperfleet-db/src/: lib.rs
crates/hyperfleet-network/: Cargo.toml
crates/hyperfleet-network/src/: lib.rs
crates/hyperfleet-vmm/: Cargo.toml
crates/hyperfleet-vmm/src/: config.rs  lib.rs  vsock.rs
crates/hyperfleet-volume/: Cargo.toml
crates/hyperfleet-volume/src/: lib.rs
crates/hypergate/: Cargo.toml
crates/hypergate/src/: main.rs
examples/basic/: README.md  index.ts  package.json  tsconfig.json
examples/bun/: README.md  hyperfleet.ts  index.ts  package.json  ralph-loop.ts  simple.ts
examples/ffmpeg/: README.md  index.ts  package.json  tsconfig.json
guest/: Makefile  README.md  init.c
hyperinit/: Makefile
hyperinit/src/: exec.c  exec.h  files.c  files.h  http.c  http.h  json.c  json.h  main.c
scripts/: setup.ts
