[package]
name = "hyperfleet-api"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Hyperfleet REST API layer"

[dependencies]
hyperfleet-common.workspace = true
hyperfleet-core = { path = "../hyperfleet-core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
