[package]
name = "hyperfleet-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hyperfleet orchestration daemon"

[[bin]]
name = "hyperfleet-daemon"
path = "src/main.rs"

[dependencies]
hyperfleet-common.workspace = true
hyperfleet-db.workspace = true
hyperfleet-network = { path = "../hyperfleet-network" }
hyperfleet-volume = { path = "../hyperfleet-volume" }
hyperfleet-vmm = { path = "../hyperfleet-vmm" }
hyperfleet-core = { path = "../hyperfleet-core" }
hyperfleet-api = { path = "../hyperfleet-api" }
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
