[package]
name = "hyperfleet-db"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Hyperfleet SQLite storage layer"

[dependencies]
hyperfleet-common.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
