[package]
name = "hyperfleet-vmm"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Hyperfleet Firecracker VMM management"

[dependencies]
hyperfleet-common.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "time", "sync"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
nix.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.15"
