[package]
name = "hyperfleet-volume"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Hyperfleet volume management"

[dependencies]
hyperfleet-common.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.15"
