[package]
name = "hypergate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hyperfleet reverse proxy"

[[bin]]
name = "hypergate"
path = "src/main.rs"

[dependencies]
hyperfleet-common.workspace = true
hyperfleet-db.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
